modified:   Controllers/AccountController.cs 	new file:   Controllers/CartController.cs 	new file:   Controllers/StoreController.cs 	modified:   Data/ApplicationDbContext.cs 	renamed:    Migrations/20240926103324_InitialCreate.Designer.cs -> Migrations/20241001092530_InitialCreate.Designer.cs 	renamed:    Migrations/20240926103324_InitialCreate.cs -> Migrations/20241001092530_InitialCreate.cs 	new file:   Migrations/20241001101758_AddProductAndCartItem.Designer.cs 	new file:   Migrations/20241001101758_AddProductAndCartItem.cs 	modified:   Migrations/ApplicationDbContextModelSnapshot.cs 	new file:   Models/Cart.cs 	new file:   Models/Product.cs 	new file:   Models/SessionExtensions.cs 	modified:   Models/User.cs 	modified:   Program.cs 	modified:   RazorWebsite.csproj 	new file:   Views/Cart/Index.cshtml 	modified:   Views/Shared/_Layout.cshtml 	new file:   Views/Store/Index.cshtml 	modified:   appsettings.json 	new file:   bin/Debug/net8.0/Newtonsoft.Json.dll 	modified:   bin/Debug/net8.0/RazorWebsite.deps.json 	modified:   bin/Debug/net8.0/RazorWebsite.dll 	modified:   bin/Debug/net8.0/RazorWebsite.exe 	modified:   bin/Debug/net8.0/RazorWebsite.pdb 	modified:   bin/Debug/net8.0/appsettings.json 	modified:   obj/Debug/net8.0/RazorWebsite.AssemblyInfo.cs 	modified:   obj/Debug/net8.0/RazorWebsite.AssemblyInfoInputs.cache 	modified:   obj/Debug/net8.0/RazorWebsite.GeneratedMSBuildEditorConfig.editorconfig 	modified:   obj/Debug/net8.0/RazorWebsite.assets.cache 	modified:   obj/Debug/net8.0/RazorWebsite.csproj.AssemblyReference.cache 	modified:   obj/Debug/net8.0/RazorWebsite.csproj.CoreCompileInputs.cache 	modified:   obj/Debug/net8.0/RazorWebsite.csproj.FileListAbsolute.txt 	modified:   obj/Debug/net8.0/RazorWebsite.dll 	modified:   obj/Debug/net8.0/RazorWebsite.pdb 	new file:   obj/Debug/net8.0/RazorWebsite.sourcelink.json 	modified:   obj/Debug/net8.0/apphost.exe 	modified:   obj/Debug/net8.0/ref/RazorWebsite.dll 	modified:   obj/Debug/net8.0/refint/RazorWebsite.d

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,22 @@
             <a class="navbar-brand" asp-controller="Account" asp-action="Login">Login</a>
             <a class="navbar-brand" asp-controller="Home" asp-action="About">About</a>
             <a class="navbar-brand" asp-controller="Home" asp-action="Contact">Contact</a>
+
+            <!-- Store Link -->
+            <a class="navbar-brand" asp-controller="Store" asp-action="Index">Store</a>
+
+            <!-- Cart Image Link -->
+            <a href="@Url.Action("Index", "Cart")" class="navbar-brand">
+                <img src="~/images/cart.png" alt="Cart" style="width: 30px; height: 30px;" />
+            </a>
+
+            <!-- Logout Button -->
+            @if (User.Identity != null && User.Identity.IsAuthenticated)
+            {
+                <form asp-controller="Account" asp-action="Logout" method="post" style="display:inline;">
+                    <button type="submit" class="btn btn-danger navbar-btn">Logout</button>
+                </form>
+            }
         </div>
     </nav>
 
